--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# confidetial info
+token.json
+
+# stuff
+package-lock.json
+
 # Logs
 logs
 *.log
@@ -56,4 +62,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
