fix mistypo in example of guild config

--- a/config/guild/config.guild_id.json
+++ b/config/guild/config.guild_id.json
@@ -1,5 +1,5 @@
 {
-    "channel": [
+    "channels": [
         {
             "twitch": "twitch_channel_name",
             "discord": "discord_channel_id"
