--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "directories.lib": "/src",
     "config": {
         "data-directory": "config",
+        "guild-config-directory": "guild",
+        "lang-file": "lang.json",
         "config-file": "config.json",
-        "token-file": "token.json"
+        "private-config-file": "private.json"
     },
     "os": [
         "linux",
@@ -38,6 +40,7 @@
     "dependencies": {
         "discord.js": "github:discordjs/discord.js",
         "moment": "^2.22.1",
+        "chalk": "^2.4.1",
         "string-format": "^2.0.0",
         "tmi.js": "github:tmijs/tmi.js"
     },
@@ -46,7 +49,10 @@
     },
     "bundleDependencies": [
         "discord.js",
-        "string-format"
+        "tmi.js",
+        "string-format",
+        "moment",
+        "chalk"
     ],
     "main": "src/main.js",
     "scripts": {
