--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "directories.lib": "/src",
     "config": {
-        "data-directory": "config",
+        "data-directory": "data",
         "guild-config-directory": "guild",
         "lang-file": "lang.json",
         "config-file": "config.json",
@@ -39,10 +39,10 @@
     },
     "dependencies": {
         "discord.js": "github:discordjs/discord.js",
-        "moment": "^2.22.1",
-        "chalk": "^2.4.1",
+        "tmi.js": "github:tmijs/tmi.js",
         "string-format": "^2.0.0",
-        "tmi.js": "github:tmijs/tmi.js"
+        "moment": "^2.22.1",
+        "chalk": "^2.4.1"
     },
     "devDependencies": {
         "eslint": "github:eslint/eslint"
