add logger to discord client

--- a/data/config.json
+++ b/data/config.json
@@ -50,6 +50,25 @@
             }
         }
     },
+    "discord": {
+        "log": {
+            "list": [
+                {
+                    "event": "debug",
+                    "level": "verbose"
+                },
+                {
+                    "event": "warn",
+                    "level": "warn"
+                },
+                {
+                    "event": "error",
+                    "level": "error"
+                }
+            ],
+            "module": "app.discord"
+        }
+    },
     "twitch": {
         "event": [
             {
