--- a/data/config.json
+++ b/data/config.json
@@ -8,6 +8,9 @@
             "error": 4
         },
         "receiver": {
+            "list": [
+                "console"
+            ],
             "console": {
                 "template": {
                     "main": {
@@ -48,7 +51,19 @@
                     ]
                 }
             }
-        }
+        },
+        "list": [
+            {
+                "type": "console",
+                "levels": [
+                    "verbose",
+                    "debug",
+                    "main",
+                    "warn",
+                    "error"
+                ]
+            }
+        ]
     },
     "discord": {
         "log": {
