add moderator badge

--- a/data/config.json
+++ b/data/config.json
@@ -303,10 +303,15 @@
                 "list": [
                     "broadcaster",
                     "subscriber",
-                    "cheer"
+                    "cheer",
+                    "moderator"
                 ],
                 "broadcaster": {
                     "emojie": "🕹",
+                    "template": "{emojie}"
+                },
+                "moderator": {
+                    "emojie": "🛡",
                     "template": "{emojie}"
                 },
                 "subscriber": {
