separate badge parser to ./parser/badge

--- a/data/config.json
+++ b/data/config.json
@@ -300,6 +300,7 @@
                 "none": -1
             },
             "badge": {
+                "folder": "badge",
                 "list": [
                     "broadcaster",
                     "subscriber",
