move ./parse/stringify to ./stringify/core

--- a/data/config.json
+++ b/data/config.json
@@ -404,11 +404,7 @@
                 }
             ],
             "none": -1
-        },
-        "stringify": {
-            "badge": {
-                "separator": ", "
-            }
         }
-    }
+    },
+    "stringify": { }
 }
