--- a/data/config.json
+++ b/data/config.json
@@ -414,7 +414,8 @@
             "id": {
                 "unsupported": {
                     "path": "unsupported",
-                    "json_space": 4
+                    "json_space": 4,
+                    "template": "**unsupported event** \n```json\n{stringified}\n```"
                 }
             }
         }
