fix ./parse/badge specific modules not fetched

--- a/data/config.json
+++ b/data/config.json
@@ -63,7 +63,8 @@
                     "error"
                 ]
             }
-        ]
+        ],
+        "module": "app.main"
     },
     "discord": {
         "log": {
