add time mark to ./twitch/message

--- a/data/config.json
+++ b/data/config.json
@@ -433,7 +433,8 @@
                     "username": {
                         "template": "{name} [{display}]"
                     },
-                    "template": "{badges} > **{username} {message}**"
+                    "template": "[{time}] {badges} > **{username} {message}**",
+                    "time": "HH:mm:ss"
                 },
                 "chat" : {
                     "path": "message",
@@ -443,7 +444,8 @@
                     "username": {
                         "template": "{name} [{display}]"
                     },
-                    "template": "{badges} > **{username}** : {message}"
+                    "template": "[{time}] {badges} > **{username}** : {message}",
+                    "time": "HH:mm:ss"
                 }
             }
         }
